--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240331225443">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240419181422">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,26 +16,39 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container-big">
-				<a href="" class="header__logo"><img src="img/logo.svg" alt="Logo"></a>
+				<a href="" class="header__logo"> <img src="img/logo.svg" alt="Logo" /></a>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" class="menu__link">Home</a></li>
-							<li class="menu__item"><a href="" class="menu__link">About</a></li>
-							<li class="menu__item"><a href="" class="menu__link">Features</a></li>
-							<li class="menu__item"><a href="" class="menu__link">How it works</a></li>
+							<li class="menu__item">
+								<a href="#" data-goto=".main-block" class="menu__link">Home</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" data-goto=".how" class="menu__link">How it works</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" data-goto=".pathway" class="menu__link">About</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" data-goto=".why" class="menu__link">Features</a>
+							</li>
 						</ul>
 					</nav>
 				</div>
 				<div class="header__actions">
-					<button type="button" class="header__button button button_border">Sign In</button>
-					<button type="button" data-da=".menu__body,767.98" class="header__button button">Get Started</button>
+					<button type="button" class="header__button button button_border">
+						Sign In
+					</button>
+					<button type="button" data-da=".menu__body,767.98" class="header__button button">
+						Get Started
+					</button>
 					<button type="button" class="icon-menu"><span></span></button>
 				</div>
 			</div>
 		</header>
+
 		<main class="page">
-			<section class="page__main main-block">
+			<section data-watch="navigator" data-watch-threshold="0.3" class="page__main main-block">
 				<div data-prlx-parent class="main-block__container-big">
 					<div class="main-block__container">
 						<div class="main-block__content">
@@ -103,7 +116,7 @@
 					</div>
 				</div>
 			</div>
-			<section data-prlx-mouse-wrapper class="page__how how">
+			<section data-watch="navigator" data-watch-threshold="0.3" data-prlx-mouse-wrapper class="page__how how">
 				<div class="how__container-big">
 					<div class="how__container">
 						<div class="how__content">
@@ -168,7 +181,7 @@
 					</div>
 				</div>
 			</section>
-			<section data-prlx-mouse-wrapper class="page__pathway pathway">
+			<section data-watch="navigator" data-watch-threshold="0.3" data-prlx-mouse-wrapper class="page__pathway pathway">
 				<div class="pathway__container-big">
 					<div class="pathway__container">
 						<div data-prlx-parent class="pathway__image image-block">
@@ -216,7 +229,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__why why">
+			<section data-watch="navigator" data-watch-threshold="0.3" class="page__why why">
 				<div class="why__container-big">
 					<div class="why__container">
 						<div class="why__content">
@@ -244,7 +257,7 @@
 						</div>
 					</div>
 			</section>
-			<section class="page__reviews reviews">
+			<section data-watch="navigator" data-watch-threshold="0.3" class="page__reviews reviews">
 				<div class="reviews__container-big">
 					<div class="reviews__container">
 						<h2 class="reviews__title title">What <span>Customers</span> have to say</h2>
@@ -278,7 +291,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__download download">
+			<section data-watch="navigator" data-watch-threshold="0.3" class="page__download download">
 				<div class="download__container-big">
 					<div class="download__container">
 						<div class="download__image image-block">
@@ -367,7 +380,7 @@
 	</div>
 	</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240331225443"></script>
+	<script src="js/app.min.js?_v=20240419181422"></script>
 </body>
 
 </html>
